# Surf2Spot

./: README.md  download.sh  pyproject.toml  requirements.in
Surf2Spot/: main.py  run.py
Surf2Spot/data/: batch_predict_from_pdb_and_dssp_surface.py  extract_sequences.py  generate_surface.py  get_atom_feature.py  get_domain.py  get_prottrans_embed.py  get_surface_partzone_antighs.py  get_surface_partzone_hsfilter.py  predict_from_pdb.py  preprocess_single_chain.py  utils.py
Surf2Spot/data/chainsaw/src/: constants.py  domain_chop.py  factories.py  featurisers.py  prediction_result_file.py
Surf2Spot/data/chainsaw/src/domain_assignment/: assigners.py
Surf2Spot/data/chainsaw/src/utils/: secondary_structure.py
Surf2Spot/data/chainsaw/stride/: stride
Surf2Spot/data/feature_extraction/: ProtTrans.py  ProtTrans_2.py
Surf2Spot/data/masif/: computeMSMS.py  my_generate_ply.py
Surf2Spot/draw/: draw_predict_antighs.py  draw_predict_hsfilter.py
Surf2Spot/predict/: get_data_list_antighs.py  get_data_list_antighs_f.py  get_data_list_hsfilter.py  get_data_list_hsfilter_f.py
Surf2Spot/tools/: path_check.py
model/HS/: config.json
model/NB/: config.json
